--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "homepage": "https://rishit2004.github.io/Doctor-Listing",
   "eslintConfig": {
